--- a/Digital-Device-Use-and-Immigrant-Status.html
+++ b/Digital-Device-Use-and-Immigrant-Status.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="robots" content="noindex, nofollow" />
 
 <title>Bridging the Gap: How SES and Immigrant Status Affect Device Use</title>
 <style>
