--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -40,7 +40,19 @@
         }
         a:hover {
             background-color: #218838;
+		}
+        .back-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            color: #fff;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: background-color 0.3s;
         }
+        .back-button:hover {
+            background-color: #0056b3;
+                }
     </style>
 </head>
 <body>
@@ -56,6 +68,6 @@
 		<a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Rasch vs IRT: Knowing when to cross the lines</a>
 		<a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Wu & Adams, Rasch Measurement</a>
 	</div>
-
+	<a href="index.html" class="back-button">Back to Index</a>
 </body>
 </html>
