--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -58,15 +58,19 @@
 <body>
     <div class="container">
         <h1>Homework Template</h1>
+		<p> Click the button below to download the template for the homework.</p>
         <a href="materials/Homework_TestUnitTemplate.docx" target="_blank">Test Unit Template for Homework</a>
      </div>
 	<div class="container">
         <h1>PDF Materials</h1>
-        <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">NCME Module on Booklet Designs</a>
-        <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">MC Item Writing Guidelines</a>
-        <a href="materials/Masters, 2001_Educational measurement_Assessment Resource Kit.pdf" target="_blank">Educational Measurement: Assessment Resources Kit</a>
-		<a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Rasch vs IRT: Knowing when to cross the lines</a>
-		<a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Wu & Adams, Rasch Measurement</a>
+		<p> These are purely option, additional readings. <br> 
+			They will be excellent as review materials, or for learning more. <br> 
+			But they aren't required readings.</p>
+        <a href="materials/Masters, 2001_Educational measurement_Assessment Resource Kit.pdf" target="_blank">General Overview: Educational Measurement - Assessment Resources Kit</a>
+        <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">Day 2, Session 1: MC Item Writing Guidelines</a>
+		<a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Day 3, Session 1: Wu & Adams, Rasch Measurement</a>
+		<a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a>
+		<a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">Day 4, Session 1: NCME Module on Booklet Designs</a>
 	</div>
 	<a href="index.html" class="back-button">Back to Index</a>
 </body>
