--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -53,15 +53,10 @@
         .back-button:hover {
             background-color: #0056b3;
                 }
-	}
-        .logo {
-            margin-bottom: 20px;
-	    width: 60%;
-        	}
-    </style>
+	</style>
 </head>
 <body>
-    <img src="materials/PISA-S.png" alt="Logo" class="logo">
+    <img src="materials/PISA-S.png" alt="Logo" style="width: 60%; margin-bottom: 20px;">
     <div class="container">
         <h1>Homework Template</h1>
 		<p> Click the button below to download the template for the homework.</p>
