--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -56,7 +56,7 @@
 	</style>
 </head>
 <body>
-    <img src="materials/PISA-S.png" alt="Logo" style="width: 25%; margin-bottom: 20px;">
+    <img src="materials/PISA-S.png" alt="Logo" style="margin-bottom: 20px; margin-top: 20px">
     <div class="container">
         <h1>Homework Template</h1>
 		<p> Click the button below to download the template for the homework.</p>
