--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -53,10 +53,18 @@
         .back-button:hover {
             background-color: #0056b3;
                 }
+	{
+	.logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 150px;
+            height: auto;
+        }
 	</style>
 </head>
 <body>
-    <img src="materials/PISA-S.png" alt="Logo" style="width: 150px; height: 150px; margin-bottom: 20px; margin-top: 20px">
+    <img src="materials/PISA-S.png" alt="Logo" class="logo">
     <div class="container">
         <h1>Homework Template</h1>
 		<p> Click the button below to download the template for the homework.</p>
