--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -59,7 +59,7 @@
             top: 20px;
             left: 20px;
             width: 100px;
-            height: auto;
+            height: 100px;
         }
 	</style>
 </head>
