--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -54,10 +54,12 @@
             background-color: #0056b3;
                 }
 	}
-	.logo {
+        .logo {
             position: absolute;
             top: 20px;
             left: 20px;
+            width: 150px; /* Adjust the width as needed */
+            height: auto; /* Maintain aspect ratio */
         }
 	</style>
 </head>
