--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -5,66 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>Workshop Materials</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            flex-direction: column;
-            position: relative;
-        }
-        .container {
-            text-align: center;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        flex-direction: column;
+        position: relative;
+    }
+    .container {
+        text-align: center;
+        background: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+        position: relative; /* Added to position the logo inside */
+    }
+    h1 {
+        color: #333;
+    }
+    a {
+        display: block;
+        margin: 10px 0;
+        padding: 10px;
+        color: #fff;
+        background-color: #28a745;
+        text-decoration: none;
+        border-radius: 4px;
+        transition: background-color 0.3s;
+    }
+    a:hover {
+        background-color: #218838;
+    }
+    .back-button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        color: #fff;
+        background-color: #007BFF;
+        text-decoration: none;
+        border-radius: 4px;
+        transition: background-color 0.3s;
+    }
+    .back-button:hover {
+        background-color: #0056b3;
+    }
+    .logo-container {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        padding: 20px 0;
+    }
+    .logo {
+        width: 100px;
+        height: auto;
+    }
+    @media (max-width: 600px) {
+        .logo-container {
+            position: static;
             margin-bottom: 20px;
         }
-        h1 {
-            color: #333;
+        .container {
+            padding-top: 60px; /* Add padding to avoid overlap */
         }
-        a {
-            display: block;
-            margin: 10px 0;
-            padding: 10px;
-            color: #fff;
-            background-color: #28a745;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        a:hover {
-            background-color: #218838;
-        }
-        .back-button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            color: #fff;
-            background-color: #007BFF;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        .back-button:hover {
-            background-color: #0056b3;
-        }
-        .logo-container {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            padding: 20px 0; /* Add top and bottom padding */
-        }
-        .logo {
-            width: 100px; /* Adjust the width as needed */
-            height: auto; /* Maintain aspect ratio */
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <div class="logo-container">
