--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -102,9 +102,13 @@
         <a href="materials/Masters, 2001_Educational measurement_Assessment Resource Kit.pdf" target="_blank">General Overview: Educational Measurement - Assessment Resources Kit</a>
         <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">Day 2, Session 1: MC Item Writing Guidelines</a>
         <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Day 3, Session 1: Wu & Adams, Rasch Measurement</a>
-        <a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a>
+	<a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a>
         <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">Day 4, Session 1: NCME Module on Booklet Designs</a>
     </div>
-	    <a href="index.html" class="back-button">Back to Index</a>
+    <div class="container">
+        <h1>Excel Materials</h1>
+        <a href="materials/Example CTT.xlsx" target="_blank">This is an example of CTT in a Spreadsheet (with dummy data)</a>
+    </div>
+    <a href="index.html" class="back-button">Back to Index</a>
 </body>
 </html>
