--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -84,12 +84,7 @@
         <img src="materials/PISA-S.png" alt="Logo" class="logo">
 		<a href="https://www.oecd.org/en/about/projects/pisa-for-schools.html" class="back-button" target="_blank">PISA for Schools <br> website</a>
     </div>
-    <!--<div class="container">
-        <h1>PISA for Schools website</h1>
-        <p>Click the button below to download the template for the homework.</p>
-        <a href="https://www.oecd.org/en/about/projects/pisa-for-schools.html" target="_blank">OECD PISA for Schools</a>
-    </div> -->
-    <div class="container">
+   <div class="container">
         <h1>Homework Template</h1>
         <p>Click the button below to download the template for the homework.</p>
         <a href="materials/Homework_TestUnitTemplate.docx" target="_blank">Test Unit Template for Homework</a>
@@ -108,6 +103,10 @@
     <div class="container">
         <h1>Excel Materials</h1>
         <a href="materials/Example CTT.xlsx" target="_blank">This is an example of CTT in a Spreadsheet (with dummy data)</a>
+    </div>
+	<div class="container">
+        <h1>Presentations Slides</h1>
+        <a href="materials/Example CTT.xlsxEdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>	
     </div>
     <a href="index.html" class="back-button">Back to Index</a>
 </body>
