--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -104,11 +104,13 @@
     <div class="container">
         <h1>Excel Materials</h1>
         <a href="materials/Example CTT.xlsx" target="_blank">This is an example of CTT in a Spreadsheet (with dummy data)</a>
+	<a href="materials/moulton.xls" target="_blank">Rasch Spreadsheet</a>
     </div>
 	<div class="container">
         <h1>Presentations Slides</h1>
         <a href="materials/EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
 	<a href="materials/EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
+	<a href="materials/EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 3</a>
     </div>
     <a href="index.html" class="back-button">Back to Index</a>
 </body>
