--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -108,8 +108,12 @@
     </div>
 	<div class="container">
         <h1>Presentations Slides</h1>
-        <a href="https://cloud.iave.pt/index.php/s/MXM9AD1hCuUr4Ok?path=%2F" target="_blank">Up to date slides are on the IAVE Cloud</a>
-    </div>
+        <a href="materials/EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
+	<a href="materials/EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
+	<a href="materials/EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 3</a>
+	<a href="materials/EdMeasurement and Item Development_Day4.pptx" target="_blank">Day 4</a>
+	<a href="materials/EdMeasurement and Item Development_Day5.pptx" target="_blank">Day 5</a>
+	</div>
     <a href="index.html" class="back-button">Back to Index</a>
 </body>
 </html>
