--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -91,9 +91,8 @@
     </div>
     <div class="container">
         <h1>PDF Materials</h1>
-        <p>These are purely optional, additional readings. <br> 
-            They will be excellent as review materials, or for learning more. <br> 
-            But they aren't required readings.</p>
+        <p>These are optional, additional readings. <br> 
+            They will be excellent as review materials, or for learning more.</p>
         <a href="materials/Masters, 2001_Educational measurement_Assessment Resource Kit.pdf" target="_blank">General Overview: Educational Measurement - Assessment Resources Kit</a>
         <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">Day 2, Session 1: MC Item Writing Guidelines</a>
         <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Day 3, Session 1: Wu & Adams, Rasch Measurement</a>
@@ -107,7 +106,7 @@
 	<a href="materials/moulton.xls" target="_blank">Rasch Spreadsheet</a>
     </div>
 	<div class="container">
-        <h1>Presentations Slides</h1>
+        <h1>Presentation Slides</h1>
         <a href="materials/EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
 	<a href="materials/EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
 	<a href="materials/EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 3</a>
