--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -108,14 +108,20 @@
     </div>
 	<div class="container">
         <h1>Presentation Slides</h1>
-	 <a href="materials/PISA for Schools 2024_CISCE.pdf" target="_blank">PISA for Schools</a>
+        <a href="materials/PISA for Schools 2024_CISCE.pdf" target="_blank">PISA for Schools</a>
         <a href="materials/EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
 	<a href="materials/EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
 	<a href="materials/EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 3</a>
-	<a href="materials/VROIF, Assessment Methods, and Rubric Design_Day3.pdf" target="_blank">New Slides Day 3, afternoon</a>
-	<a href="materials/EdMeasurement and Item Development_Day4.pptx" target="_blank">Day 4</a>
+   <!-- <a href="materials/EdMeasurement and Item Development_Day4.pptx" target="_blank">Day 4</a>
 	<a href="materials/EdMeasurement and Item Development_Day5.pptx" target="_blank">Day 5</a>
+    -->
 	</div>
-    <a href="index.html" class="back-button">Back to Index</a>
+     <div class="container">
+        <h1>Revised Presentation Slides</h1>
+	<a href="materials/VROIF, Assessment Methods, and Rubric Design_Day3.pdf" target="_blank">New Slides Day 3, afternoon</a>
+	<a href="materials/EdMeasurement and Item Development_Day4_Revised.pptx" target="_blank">New Slides Day 4</a>
+	<a href="materials/EdMeasurement and Item Development_Day5_Revised.pptx" target="_blank">New Slides Day 5</a>
+	</div>
+  
 </body>
 </html>
