--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -112,12 +112,11 @@
         <a href="materials/EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
 	<a href="materials/EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
 	<a href="materials/EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 3</a>
-   <!-- <a href="materials/EdMeasurement and Item Development_Day4.pptx" target="_blank">Day 4</a>
+        <a href="materials/EdMeasurement and Item Development_Day4.pptx" target="_blank">Day 4</a>
 	<a href="materials/EdMeasurement and Item Development_Day5.pptx" target="_blank">Day 5</a>
-    -->
 	</div>
      <div class="container">
-        <h1>Revised Presentation Slides</h1>
+        <h1>Revised Presentation Slides (India Workshop)</h1>
 	<a href="materials/VROIF, Assessment Methods, and Rubric Design_Day3.pdf" target="_blank">New Slides Day 3, afternoon</a>
 	<a href="materials/EdMeasurement and Item Development_Day4_Revised.pptx" target="_blank">New Slides Day 4</a>
 	<a href="materials/EdMeasurement and Item Development_Day5_Revised.pptx" target="_blank">New Slides Day 5</a>
