--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <div class="container">
         <h1>Workshop Resources</h1>
-        <a href="Digital Device Use and Immigrant Status.html">Digital Device Use and Immigrant Status</a>
+        <a href="Digital-Device-Use-and-Immigrant-Status.html">Digital Device Use and Immigrant Status</a>
         <a href="Educational-Measurement-Workshop-Materials.html">Educational Measurement Materials</a>
     </div>
 </body>
