Minor Heading update

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Workshop Resources</h1>
-        <a href="Digital-Device-Use-and-Immigrant-Status.html">Digital Device Use and Immigrant Status</a>
-        <a href="Educational-Measurement-Workshop-Materials.html">Educational Measurement Materials</a>
+        <h1>Resource Pages and/or Projects</h1>
+         <a href="Educational-Measurement-Workshop-Materials.html">Resource Page: Educational Measurement Workshop</a>
+         <a href="Digital-Device-Use-and-Immigrant-Status.html">Project: Digital Device Use and Immigrant Status</a>
     </div>
 </body>
 </html>
