--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Resource Pages and/or Projects</h1>
          <a href="Educational-Measurement-Workshop-Materials.html">Resource Page: Educational Measurement Workshop</a>
-         <a href="Digital-Device-Use-and-Immigrant-Status.html">Project: Digital Device Use and Immigrant Status</a>
+      <!--   <a href="Digital-Device-Use-and-Immigrant-Status.html">Project: Digital Device Use and Immigrant Status</a> -->
     </div>
 </body>
 </html>
