--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -80,9 +80,9 @@
 </style>
 </head>
 <body>
-    <div class="logo-container">
+   <!-- <div class="logo-container">
         <img src="materials/PISA-S.png" alt="Logo" class="logo">
-		<a href="https://www.oecd.org/en/about/projects/pisa-for-schools.html" class="back-button" target="_blank">PISA for Schools <br> website</a>
+		<a href="https://www.oecd.org/en/about/projects/pisa-for-schools.html" class="back-button" target="_blank">PISA for Schools <br> website</a> -->
     </div>
    <div class="container">
         <h1>Homework Template</h1>
@@ -90,16 +90,14 @@
         <a href="materials/Homework_TestUnitTemplate.docx" target="_blank">Test Unit Template for Homework</a>
     </div>
     <div class="container">
-        <h1>PDF Materials</h1>
-        <p>These are optional, additional readings. <br> 
-            They will be excellent as review materials, or for learning more.</p>
+        <h1> Further Reading: PDF Materials</h1>
         <a href="materials/Masters, 2001_Educational measurement_Assessment Resource Kit.pdf" target="_blank">General Overview: Educational Measurement - Assessment Resources Kit</a>
-        <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">Day 2, Session 1: MC Item Writing Guidelines</a>
-        <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Day 3, Session 1: Wu & Adams, Rasch Measurement</a>
-	<a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a>
-        <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">Day 4, Session 1: NCME Module on Booklet Designs</a>
+        <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">MC Item Writing Guidelines</a>
+        <!-- <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Wu & Adams, Rasch Measurement</a> -->
+	<!-- <a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a> -->
+        <!-- <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">Day 4, Session 1: NCME Module on Booklet Designs</a> -->
 	<a href="materials/ThreeOptionMCQs.pdf" target="_blank">Three Option MCQ</a>
-	<a href="materials/India(Delhi)-OECD SSES.pdf" target="_blank">Survey of Socio-Emotional Skills Report for Delhi</a>
+	<!-- <a href="materials/India(Delhi)-OECD SSES.pdf" target="_blank">Survey of Socio-Emotional Skills Report for Delhi</a> -->
     </div>
     <div class="container">
         <h1>Excel Materials</h1>
@@ -107,7 +105,15 @@
 	<a href="materials/moulton.xls" target="_blank">Rasch Spreadsheet</a>
     </div>
 	<div class="container">
-        <h1>Presentation Slides</h1>
+	<h1>Presentation Slides</h1>
+	<a href="materials/BEA_EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
+	<a href="materials/BEA_EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
+	<a href="materials/BEA_EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 3</a>
+	<a href="materials/BEA_EdMeasurement and Item Development_Day3.pptx" target="_blank">Day 4</a>
+	</div>
+<!-- 
+        <div class="container">
+	<h1>Presentation Slides</h1>
         <a href="materials/PISA for Schools 2024_CISCE.pdf" target="_blank">PISA for Schools</a>
         <a href="materials/EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
 	<a href="materials/EdMeasurement and Item Development_Day2.pptx" target="_blank">Day 2</a>
@@ -115,12 +121,13 @@
         <a href="materials/EdMeasurement and Item Development_Day4.pptx" target="_blank">Day 4</a>
 	<a href="materials/EdMeasurement and Item Development_Day5.pptx" target="_blank">Day 5</a>
 	</div>
-     <div class="container">
+
+	<div class="container">
         <h1>Revised Presentation Slides (India Workshop)</h1>
 	<a href="materials/VROIF, Assessment Methods, and Rubric Design_Day3.pdf" target="_blank">New Slides Day 3, afternoon</a>
 	<a href="materials/EdMeasurement and Item Development_Day4_Revised.pptx" target="_blank">New Slides Day 4</a>
 	<a href="materials/EdMeasurement and Item Development_Day5_Revised.pptx" target="_blank">New Slides Day 5</a>
 	</div>
-  
+   -->
 </body>
 </html>
