--- a/homework_upload.html
+++ b/homework_upload.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8">
   <title>Homework Upload</title>
   <style>
