--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -97,7 +97,7 @@
         <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">MC Item Writing Guidelines</a>
         <!-- <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Wu & Adams, Rasch Measurement</a> -->
 	<!-- <a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a> -->
-        <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">Day 4, Session 1: NCME Module on Booklet Designs</a>
+        <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">NCME Instructional Module on Booklet Designs</a>
 	<a href="materials/ThreeOptionMCQs.pdf" target="_blank">Three Option MCQ</a>
 	<!-- <a href="materials/India(Delhi)-OECD SSES.pdf" target="_blank">Survey of Socio-Emotional Skills Report for Delhi</a> -->
     </div>
