--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -88,7 +88,7 @@
         <h1>Homework Template</h1>
         <p>Click the button below to download the template for the homework.</p>
         <a href="materials/Homework_TestUnitTemplate.docx" target="_blank">Test Unit Template for Homework</a>
-		<p>Click the button below to got to the homework upload page.</p>
+		<p>Click the button below to upload your homework.</p>
         <a href="https://sumrandomr.github.io/homework_upload.html" target="_blank">Hand in your homework</a>
     </div>
     <div class="container">
