--- a/Educational-Measurement-Workshop-Materials.html
+++ b/Educational-Measurement-Workshop-Materials.html
@@ -82,29 +82,35 @@
 <body>
    <!-- <div class="logo-container">
         <img src="materials/PISA-S.png" alt="Logo" class="logo">
-		<a href="https://www.oecd.org/en/about/projects/pisa-for-schools.html" class="back-button" target="_blank">PISA for Schools <br> website</a> -->
-    </div>
-   <div class="container">
+		<a href="https://www.oecd.org/en/about/projects/pisa-for-schools.html" class="back-button" target="_blank">PISA for Schools <br> website</a>
+    </div> -->
+   <!-- <div class="container">
         <h1>Homework Template</h1>
         <p>Click the button below to download the template for the homework.</p>
         <a href="materials/Homework_TestUnitTemplate.docx" target="_blank">Test Unit Template for Homework</a>
 		<p>Click the button below to upload your homework.</p>
         <a href="https://sumrandomr.github.io/homework_upload.html" target="_blank">Hand in your homework</a>
-    </div>
+    </div>  -->
     <div class="container">
         <h1> Further Reading: PDF Materials</h1>
         <a href="materials/Masters, 2001_Educational measurement_Assessment Resource Kit.pdf" target="_blank">General Overview: Educational Measurement - Assessment Resources Kit</a>
         <a href="materials/Haladyna, Downing, Rodriguez_2002_A review of MC item-writing Guidelines.pdf" target="_blank">MC Item Writing Guidelines</a>
-        <!-- <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Wu & Adams, Rasch Measurement</a> -->
-	<!-- <a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a> -->
+        <a href="materials/Wu and Adams_Rasch Measurement.pdf" target="_blank">Wu & Adams, Rasch Measurement</a>
+		<a href="materials/Stemler and Naples, 2021_Rasch v. IRT  Knowing When to Cross the Line.pdf" target="_blank">Day 3, Session 3: Rasch vs IRT: Knowing when to cross the lines</a> -->
         <a href="materials/Educational Measurement_2009_Frey_An NCME Instructional Module on Booklet Designs in Large Scale Assessments.pdf" target="_blank">NCME Instructional Module on Booklet Designs</a>
-	<a href="materials/ThreeOptionMCQs.pdf" target="_blank">Three Option MCQ</a>
+		<a href="materials/ThreeOptionMCQs.pdf" target="_blank">Three Option MCQ</a>
     </div>
     <div class="container">
         <h1>Excel Materials</h1>
         <a href="materials/Example CTT.xlsx" target="_blank">This is an example of CTT in a Spreadsheet (with dummy data)</a>
-		<a href="materials/moulton.xls" target="_blank">Rasch Spreadsheet</a>
+		<a href="materials/moulton.xls" target="_blank">Rasch Spreadsheet by Moulton</a>
     </div>
+	<div class="container">
+	<h1>Simple R scripts for CTT and Rasch Analysis</h1>
+		<a href="materials/CTT Example.R" target="_blank">CTT Example</a>
+		<a href="materials/RM Example.R" target="_blank">Rasch Example</a>
+		<a href="materials/Example.csv" target="_blank">Example Data</a>
+	</div>
 	<div class="container">
 	<h1>Presentation Slides</h1>
 		<!-- <a href="materials/BEA_EdMeasurement and Item Development_Day1.pptx" target="_blank">Day 1</a>
